# Extract-points

./: .dockerignore  .env.example  .gitignore  .replit  AUTOMATION_GUIDE.md  AUTOMATION_QUICKSTART.md  BUG_ANALYSIS.md  BUG_FIXES_REPORT.md  COMPLETION_REPORT.txt  DELIVERY_SUMMARY.txt  Dockerfile  EMAIL_SETUP_GUIDE.md  FIX_SUMMARY.md  GROQ_SETUP.md  IMPLEMENTATION_SUMMARY.md  QUICK_EMAIL_START.md  QUICK_REFERENCE.md  README.md  RESUME_INJECTION_GUIDE.md  SECURITY_REPORT.md  START_HERE.md  TAB7_AUTOMATION_INTEGRATION.md  WORKSPACE_OVERVIEW.md  analyze_resume_detailed.py  automation_workflow.py  create_bookmarks.py  create_resume_bookmarks.py  main.py  pyproject.toml  requirements.txt  resume_catalog.json  review_resume.py  setup_neon.py  setup_resumes.py  test_automation.py  test_golang_role.py  test_neon.py  test_optional_message.py  test_output_formatted.docx  test_real_job.py
.streamlit/: config.toml
resumes_uploaded/: Java.docx  Node.docx
utils/: batch_processor.py  batch_resume_injector.py  bookmark_manager.py  cloud_storage_manager.py  deduplicator.py  email_sender.py  export_handler.py  gemini_points_generator.py  neon_resume_manager.py  persistence.py  resume_catalog.py  resume_injector.py  resume_matcher.py  security_utils.py  text_processor.py  validators.py
