[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Resume processing and email sending application"
requires-python = ">=3.11"
dependencies = [
    "python-docx>=1.1.2",
    "reportlab>=4.3.1",
    "streamlit>=1.43.0",
    "groq>=0.4.0",
    "python-dotenv>=1.0.0",
    # Email and Cloud Storage
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.100.0",
    "dropbox>=11.36.0",
    "sendgrid>=6.10.0",
    "pandas>=2.0.0",
]
